Modify PUT /requests/:requestId for update study member
